Fix version number contrast

--- a/inst/pkgdown/extra.scss
+++ b/inst/pkgdown/extra.scss
@@ -17,6 +17,11 @@
   color: #555;
 }
 
+// Version number colour for releases
+.nav-text.text-muted {
+  color: #888 !important;
+}
+
 .navbar > .container {
   align-items: center;
   -webkit-align-items: center;
